objects/PEPE_Agenda_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_Description__c</fullName>
        <label>Agenda Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agenda_Status__c</fullName>
        <label>Agenda Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agenda_Type__c</fullName>
        <label>Agenda Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BREAK</fullName>
                </value>
                <value>
                    <fullName>AGENDA</fullName>
                    <default>true</default>
                    <label>AGENDA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <description>This will define the type of Architecture.</description>
        <label>Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agenda_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Cross-Architecture</fullName>
                </value>
                <value>
                    <fullName>Data Center / Virtualization</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networking</fullName>
                </value>
                <value>
                    <fullName>Internet of Things (IoT)</fullName>
                </value>
                <value>
                    <fullName>None Specified</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audiences__c</fullName>
        <description>For Oct Release 2016</description>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CXO</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>Multi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Learning_Partner__c</fullName>
        <label>Business Learning Partner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Delivery_Team__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>5i</fullName>
                </value>
                <value>
                    <fullName>Cluster Learning</fullName>
                </value>
                <value>
                    <fullName>Concept Sales</fullName>
                </value>
                <value>
                    <fullName>DUMMY</fullName>
                </value>
                <value>
                    <fullName>DUMMY1</fullName>
                </value>
                <value>
                    <fullName>Fastlane</fullName>
                </value>
                <value>
                    <fullName>Firefly</fullName>
                </value>
                <value>
                    <fullName>Global Knowledge</fullName>
                </value>
                <value>
                    <fullName>Innovise</fullName>
                </value>
                <value>
                    <fullName>NIL</fullName>
                </value>
                <value>
                    <fullName>Quadmark</fullName>
                </value>
                <value>
                    <fullName>Summit Group</fullName>
                </value>
                <value>
                    <fullName>Tomato Tomato</fullName>
                </value>
                <value>
                    <fullName>UpDate</fullName>
                </value>
                <value>
                    <fullName>Vortex6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DW_ID__c</fullName>
        <inlineHelpText>Please enter DW ID in the format 'DW-NNNNN-NNNNN'</inlineHelpText>
        <label>DW ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Team__c</fullName>
        <label>Delivery Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agenda_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Business Learning Partner</fullName>
                </value>
                <value>
                    <fullName>Distributors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_Unit__c</fullName>
        <label>Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                    <default>true</default>
                    <label>Hours</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Estimated Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Agenda_Count__c</fullName>
        <description>Roll-up field to calculate the Event Agenda records related to AT record</description>
        <label>Event Agenda Count</label>
        <summaryForeignKey>PEPE_Event_Agenda__c.Agenda_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Foundational</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Focus__c</fullName>
        <label>Primary Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Multi Focus</fullName>
                </value>
                <value>
                    <fullName>Talent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agenda_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Local breakout</fullName>
                </value>
                <value>
                    <fullName>Local session</fullName>
                </value>
                <value>
                    <fullName>Virtual session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Technology__c</fullName>
        <label>Sub-Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technology__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Web Security</fullName>
                </value>
                <value>
                    <fullName>Email Security</fullName>
                </value>
                <value>
                    <fullName>Cloud Access Security</fullName>
                </value>
                <value>
                    <fullName>Cloud Web Security</fullName>
                </value>
                <value>
                    <fullName>Cisco ASA with FirePower Services</fullName>
                </value>
                <value>
                    <fullName>Cisco Virtual Adaptive Security Appliance (ASAv)</fullName>
                </value>
                <value>
                    <fullName>Cisco Firepower NGIPS Appliance</fullName>
                </value>
                <value>
                    <fullName>Cisco Identity Services Engine (ISE)</fullName>
                </value>
                <value>
                    <fullName>Cisco TrustSec</fullName>
                </value>
                <value>
                    <fullName>Cisco AnyConnect Secure Mobility Client</fullName>
                </value>
                <value>
                    <fullName>Advanced Malware Protection (AMP)</fullName>
                </value>
                <value>
                    <fullName>AMP + ThreatGrid</fullName>
                </value>
                <value>
                    <fullName>ACI Security Solution</fullName>
                </value>
                <value>
                    <fullName>Cyber Threat Defense (CTD)</fullName>
                </value>
                <value>
                    <fullName>Enterprise License Agreement (ELA)</fullName>
                </value>
                <value>
                    <fullName>Network-as-a-Sensor/Network-as-an-Enforcer (Naas/NaaE)</fullName>
                </value>
                <value>
                    <fullName>Secure Data Center</fullName>
                </value>
                <value>
                    <fullName>Cisco Application Centric Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Cisco Nexus 9000 Series Switches</fullName>
                </value>
                <value>
                    <fullName>Microsoft Applications on Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>SAP applications on Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Cisco Desktop Virtualization solutions</fullName>
                </value>
                <value>
                    <fullName>Cisco ONE for Data Center</fullName>
                </value>
                <value>
                    <fullName>Cisco UCS Director</fullName>
                </value>
                <value>
                    <fullName>Cisco ONE Enterprise Cloud suite</fullName>
                </value>
                <value>
                    <fullName>Data Center Designs: Converged Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Flexpod</fullName>
                </value>
                <value>
                    <fullName>Versastack solution</fullName>
                </value>
                <value>
                    <fullName>UCS Open Stack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Architecture__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACI</fullName>
                </value>
                <value>
                    <fullName>Advanced Threat</fullName>
                </value>
                <value>
                    <fullName>Application Experience as a Service (AXaaS)</fullName>
                </value>
                <value>
                    <fullName>BE6000</fullName>
                </value>
                <value>
                    <fullName>BYOD as a Service (BYODaaS)</fullName>
                </value>
                <value>
                    <fullName>CIN</fullName>
                </value>
                <value>
                    <fullName>Cisco Cloud Services or Cisco SaaS</fullName>
                </value>
                <value>
                    <fullName>Cisco Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>Cloud Cell Architecture for SAP HANA (SAP HANA)</fullName>
                </value>
                <value>
                    <fullName>Collab Other</fullName>
                </value>
                <value>
                    <fullName>Compute</fullName>
                </value>
                <value>
                    <fullName>Conferencing</fullName>
                </value>
                <value>
                    <fullName>Connected Safety and Security</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Contact Center as a Service based on HCS (HCS_CC)</fullName>
                </value>
                <value>
                    <fullName>Content Security</fullName>
                </value>
                <value>
                    <fullName>Converged Infrastructure</fullName>
                </value>
                <value>
                    <fullName>DC Security</fullName>
                </value>
                <value>
                    <fullName>DC Software</fullName>
                </value>
                <value>
                    <fullName>DC Switching</fullName>
                </value>
                <value>
                    <fullName>Desktop as a Service (DaaS)</fullName>
                </value>
                <value>
                    <fullName>Desktop Virtualization</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery as a Service (DRaaS)</fullName>
                </value>
                <value>
                    <fullName>Foundation for Software as a Service (FnSaaS)</fullName>
                </value>
                <value>
                    <fullName>Hosted Security as a Service (HSS)</fullName>
                </value>
                <value>
                    <fullName>Hybrid Cloud (Intercloud Fabric)</fullName>
                </value>
                <value>
                    <fullName>Infrastructure as a Service (IaaS)</fullName>
                </value>
                <value>
                    <fullName>IoT-AS=Advanced Services</fullName>
                </value>
                <value>
                    <fullName>IoT-CCS=Cisco Consulting Services</fullName>
                </value>
                <value>
                    <fullName>IoT-CIE=Connected Industries and Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Types__c</fullName>
        <label>Training Types</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agenda_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Acumen</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Programs, Tools and Incentives</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Excellence</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Soft Skills</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agenda Topic</label>
    <nameField>
        <displayFormat>AT-{00000000}</displayFormat>
        <label>Agenda Topic ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agenda Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Agenda_Description__c</columns>
        <columns>Agenda__c</columns>
        <columns>Architecture__c</columns>
        <columns>Business_Learning_Partner__c</columns>
        <columns>Delivery_Team__c</columns>
        <columns>Duration_Unit__c</columns>
        <columns>Technology__c</columns>
        <columns>Training_Types__c</columns>
        <columns>Agenda_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PEPE_AGENDA</fullName>
        <columns>NAME</columns>
        <columns>Agenda__c</columns>
        <columns>Architecture__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Agenda_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>PEPE AGENDA</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>REC_AGENDA</fullName>
        <active>true</active>
        <description>Default Agenda Page</description>
        <label>Agenda</label>
    </recordTypes>
    <recordTypes>
        <fullName>REC_AGENDA_WITHOUT_DELETE</fullName>
        <active>true</active>
        <description>Displays the Agenda Page without Delete Button</description>
        <label>AGENDA_WITHOUT_DELETE</label>
    </recordTypes>
    <validationRules>
        <fullName>PPL_NON_EDIT_FIELDS</fullName>
        <active>true</active>
        <description>Delivery Team and BLP Name cannot be changed after Event Agenda are created</description>
        <errorConditionFormula>AND ((Event_Agenda_Count__c&gt;0 ), OR( ISCHANGED(Delivery_Team__c) , ISCHANGED(Business_Learning_Partner__c)))</errorConditionFormula>
        <errorMessage>Event Agenda has been created for this Agenda Topic, Delivery Team and Business Learning Partner cannot be changed</errorMessage>
    </validationRules>
</CustomObject>